# AutoVideoMasking_SAM_GEMINI

./: .env.example  .gitignore  README.md  VLM_BRIDGE_README.md  __init__.py  provisioning_avm.sh  pyproject.toml
.claude/: settings.local.json
nodes/: __init__.py  prompts.py  samhera_utils.py  vlm_sam3_bridge.py  vlm_sam3_bridge_Old.py
nodes/old/: __init__.py  vlm_sam3_bridge_12.py  vlm_sam3_bridge_14.py  vlm_sam3_bridge_15.py  vlm_sam3_bridge_16.py  vlm_sam3_bridge_17.py  vlm_sam3_bridge_18.py  vlm_sam3_bridge_19.py  vlm_sam3_bridge_20.py  vlm_sam3_bridge_21.py  vlm_sam3_bridge_combined.py
tests/: test_vlm_multi_frame_bbox_preview.py  test_vlm_to_bbox_and_points_multi_frame.py
workflow/: AVM_LayerSelectPreview.json  SAM3_Gemini_AutoMaskingForVideo.json
